58) Only show metadata when it exists in the table
59) Redo the way time is calculated in the statistics
60) Turn on autocomplete when saving the playlist
61) Enable moving on the playlist
62) Split up the metadata/non-metadata tables, this will fix searching and sorting.
63) Added new search option 'Any'
64) When 'find'ing do not assume the sort needs to be changed.
	
ver 0.11.0 (2004/6/18)
1) Add ability to add streams
2) Support for displaying stream names

ver 0.10.1 (2004/3/25)
1) Check that Track, Album, and Artist indexes are set for songs
2) Fix seek bar devide by zero error when total time is 0

ver 0.10.0 (2004/3/4)
1) Add password support
2) Add crossfade support
3) UTF-8 Support
4) Fix " " => "%20" for url in last song of playlist (Hannes Reich)
5) Link directory names instead of using [dir]

ver 0.9.1 (2003/10/30)
1) Fix flush() bugs with z-compression
2) Check for each metadata element for songs

ver 0.9.0 (2003/9/30)
1) Add seeking support
2) Add random mode support
3) Add "condense" mode, so that it doesn't show all songs in the playlist for
faster playlist processing and rendering in a browser.

ver 0.8.3 (2003/8/12)
1) Fix a bug in display playlist if some songs contain tags and some don't
2) Fix a bug with +
3) Fix a bug with #

ver 0.8.2 (2003/7/22)
1) Added no-cache to html headers
2) Added nowrap on playlist title buttons
3) Put unix time in URL to workaround metaflag refresh not works for delete
4) refresh not working correctly

ver 0.8.1 (2003/7/11)
1) Fix \ and " bug for adding directories to playlist
2) Fix bug for indexing music with filenames_only
3) Rewrite playlist display, so it doesn't put songs in array, just print them
out immediatly, should consume less ram and be faster

ver 0.8.0 (2003/7/6)
1) Remove index table, put index with corresponding table
2) Use listall to queue all files in a directory
3) Add frames_layout config option
4) Fix " bug

ver 0.6.0 (2003/6/19)
1) add volume control
2) add repeate mode